[package]
name = "nodex"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "nodex"
path = "src/lib.rs"

[[bin]]
name = "nodex"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
zmq = "0.10.0"
